remove gx and gy  classes to fix the unintended wide area on smaller displays

--- a/media-queries.css
+++ b/media-queries.css
@@ -37,6 +37,8 @@
     padding: 50px 0px;
   }
 
+  
+
   #carousel {
     width: 100%;
     height: 300px;
@@ -64,8 +66,15 @@
 }
 
 @media (max-width: 430px) {
+
+  
   section {
     margin: 0px;
     padding: 20px 0px;
+  }
+
+
+  .display-4{
+    font-size: 24px !important;
   }
 }
